# cloudflare-worker-speed-test

./: .gitignore  Cargo.toml  README.md  package.json  test_performance.py  wrangler.toml
src/: lib.rs
worker/: worker.js
