[package]
name = "speed-test"
version = "0.1.0"
authors = ["Samuel Colvin <s@muelcolvin.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
#default = ["wee_alloc", "simple_replace"]
#default = ["simple_replace"]

default = ["wee_alloc", "regex"]

simple_replace = []

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4.2", optional = true }
regex = { version = "1.3.9", optional = true, default-features = false, features = ["std"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
# has a small but notiable effect on size:
lto = true
codegen-units = 1

